--- a/cms/src/main/resources/log4j.properties
+++ b/cms/src/main/resources/log4j.properties
@@ -1,10 +1,11 @@
 # This is the configuring for logging displayed in the Application Server
-log4j.rootLogger=DEBUG,aceAppender
+log4j.rootLogger=ERROR,aceAppender
 #ace4j log appender
 log4j.appender.aceAppender=com.alibaba.appengine.api.log.appender.LogAppender
 log4j.appender.aceAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.aceAppender.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS}%-5p[%-c]%m%n
-log4j.appender.aceAppender.Threshold=INFO
+log4j.appender.aceAppender.Threshold=DEBUG
+log4j.logger.com.yidumen.cms=DEBUG
 
 
 #log4j.rootCategory=OFF, stdout    
