--- a/pom.xml
+++ b/pom.xml
@@ -10,5 +10,6 @@
     <module>dao</module>
     <module>cms</module>
     <module>ftplet</module>
+    <module>SpringOnACE</module>
   </modules>
 </project>
