--- a/cms/src/main/webapp/WEB-INF/web.xml
+++ b/cms/src/main/webapp/WEB-INF/web.xml
@@ -5,18 +5,11 @@
         <param-value>Development</param-value>
     </context-param>
     <context-param>
-        <param-name>contextConfigLocation</param-name>
-        <param-value>/WEB-INF/daoContext.xml,/WEB-INF/applicationContext.xml</param-value>
-    </context-param>
-    <context-param>
         <param-name>javax.faces.DATETIMECONVERTER_DEFAULT_TIMEZONE_IS_SYSTEM_TIMEZONE</param-name>
         <param-value>true</param-value>
     </context-param>
     <listener>
-        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-    </listener>
-    <listener>
-        <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
+        <listener-class>org.jboss.weld.environment.servlet.Listener</listener-class>
     </listener>
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
@@ -27,27 +20,16 @@
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>*.jsf</url-pattern>
     </servlet-mapping>
-    <!--    <servlet>
-        <servlet-name>WebService</servlet-name>
-        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-        <init-param>
-            <param-name>contextClass</param-name>
-            <param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext</param-value>
-        </init-param>
-        <init-param>
-            <param-name>contextConfigLocation</param-name>
-            <param-value>com.yidumen.cms.framework.WebConfig</param-value>
-        </init-param>
-        <load-on-startup>2</load-on-startup>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>WebService</servlet-name>
-        <url-pattern>/service/*</url-pattern>
-    </servlet-mapping>-->
     <session-config>
         <session-timeout>5</session-timeout>
     </session-config>
     <welcome-file-list>
         <welcome-file>login.jsf</welcome-file>
     </welcome-file-list>
+    <resource-env-ref>
+        <resource-env-ref-name>BeanManager</resource-env-ref-name>
+        <resource-env-ref-type>
+            javax.enterprise.inject.spi.BeanManager
+        </resource-env-ref-type>
+    </resource-env-ref>
 </web-app>
