--- a/web/src/main/resources/log4j.properties
+++ b/web/src/main/resources/log4j.properties
@@ -1,9 +1,11 @@
 # This is the configuring for logging displayed in the Application Server
-log4j.rootLogger=INFO,aceAppender
+log4j.rootLogger=ERROR,aceAppender
 #ace4j log appender
 log4j.appender.aceAppender=com.alibaba.appengine.api.log.appender.LogAppender
+#log4j.appender.aceAppender.encoding=UTF-8
 log4j.appender.aceAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.aceAppender.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS}%-5p[%-c]%m%n
+log4j.appender.aceAppender.layout.ConversionPattern=%d{HH:mm:ss,SSS}%-5p[%F]%M:%m%n
+#log4j.appender.aceAppender.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS}%-5p[%-c]%m%n
 log4j.appender.aceAppender.Threshold=ALL
 
 
@@ -12,4 +14,4 @@ log4j.appender.aceAppender.Threshold=ALL
 #log4j.appender.stdout.layout=org.apache.log4j.PatternLayout     
 #log4j.appender.stdout.layout.ConversionPattern=[YDM] %p [%d] %C.%M(%L) | %m%n   
 
-log4j.logger.com.yidumen.web.view=DEBUG
+log4j.logger.com.yidumen.web=DEBUG
